--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,7 @@
           <li class="nav-item">
             <a class="nav-link" href="property-grid.html">Property</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="blog-grid.html">Blog</a>
           </li>
           <li class="nav-item dropdown">
@@ -169,16 +169,16 @@
               <a class="dropdown-item" href="agents-grid.html">Agents Grid</a>
               <a class="dropdown-item" href="agent-single.html">Agent Single</a>
             </div>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link active" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
-      <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
+      <!-- <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
-      </button>
+      </button> -->
     </div>
   </nav>
   <!--/ Nav End /-->
@@ -448,9 +448,9 @@
               <li class="list-inline-item">
                 <a href="#">Property</a>
               </li>
-              <li class="list-inline-item">
+              <!-- <li class="list-inline-item">
                 <a href="#">Blog</a>
-              </li>
+              </li> -->
               <li class="list-inline-item">
                 <a href="#">Contact</a>
               </li>
