--- a/property-grid.html
+++ b/property-grid.html
@@ -155,10 +155,10 @@
           <li class="nav-item">
             <a class="nav-link active" href="property-grid.html">Property</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="blog-grid.html">Blog</a>
-          </li>
-          <li class="nav-item dropdown">
+          </li> -->
+          <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Pages
@@ -169,16 +169,16 @@
               <a class="dropdown-item" href="agents-grid.html">Agents Grid</a>
               <a class="dropdown-item" href="agent-single.html">Agent Single</a>
             </div>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
-      <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
+      <!-- <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
-      </button>
+      </button> -->
     </div>
   </nav>
   <!--/ Nav End /-->
@@ -214,7 +214,7 @@
   <section class="property-grid grid">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12">
+        <!-- <div class="col-sm-12">
           <div class="grid-option">
             <form>
               <select class="custom-select">
@@ -225,24 +225,24 @@
               </select>
             </form>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-4">
           <div class="card-box-a card-shadow">
             <div class="img-box-a">
-              <img src="img/property-1.jpg" alt="" class="img-a img-fluid">
+              <img src="img/drawings/5.jpg" alt="" class="img-a img-fluid">
             </div>
             <div class="card-overlay">
               <div class="card-overlay-a-content">
                 <div class="card-header-a">
                   <h2 class="card-title-a">
-                    <a href="#">204 Mount
-                      <br /> Olive Road Two</a>
+                    <a href="#">Appartment
+                      <br /> Name</a>
                   </h2>
                 </div>
                 <div class="card-body-a">
-                  <div class="price-box d-flex">
+                  <!-- <div class="price-box d-flex">
                     <span class="price-a">rent | $ 12.000</span>
-                  </div>
+                  </div> -->
                   <a href="property-single.html" class="link-a">Click here to view
                     <span class="ion-ios-arrow-forward"></span>
                   </a>
@@ -273,7 +273,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <div class="card-box-a card-shadow">
             <div class="img-box-a">
               <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
@@ -319,8 +319,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-4">
+        </div> -->
+        <!-- <div class="col-md-4">
           <div class="card-box-a card-shadow">
             <div class="img-box-a">
               <img src="img/property-6.jpg" alt="" class="img-a img-fluid">
@@ -366,8 +366,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-4">
+        </div> -->
+        <!-- <div class="col-md-4">
           <div class="card-box-a card-shadow">
             <div class="img-box-a">
               <img src="img/property-7.jpg" alt="" class="img-a img-fluid">
@@ -413,8 +413,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-4">
+        </div> -->
+        <!-- <div class="col-md-4">
           <div class="card-box-a card-shadow">
             <div class="img-box-a">
               <img src="img/property-8.jpg" alt="" class="img-a img-fluid">
@@ -460,8 +460,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-4">
+        </div> -->
+        <!-- <div class="col-md-4">
           <div class="card-box-a card-shadow">
             <div class="img-box-a">
               <img src="img/property-10.jpg" alt="" class="img-a img-fluid">
@@ -507,9 +507,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-sm-12">
           <nav class="pagination-a">
             <ul class="pagination justify-content-end">
@@ -535,7 +535,7 @@
             </ul>
           </nav>
         </div>
-      </div>
+      </div> -->
     </div>
   </section>
   <!--/ Property Grid End /-->
@@ -558,14 +558,14 @@
             <div class="w-footer-a">
               <ul class="list-unstyled">
                 <li class="color-a">
-                  <span class="color-text-a">Phone .</span> contact@example.com</li>
+                  <span class="color-text-a">Email .</span> info@allonivestments.co.ke</li>
                 <li class="color-a">
-                  <span class="color-text-a">Email .</span> +54 356 945234</li>
+                  <span class="color-text-a">Phone .</span> +254 708 912988</li>
               </ul>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-4 section-md-t3">
+        <!-- <div class="col-sm-12 col-md-4 section-md-t3">
           <div class="widget-a">
             <div class="w-header-a">
               <h3 class="w-title-a text-brand">The Company</h3>
@@ -595,8 +595,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 section-md-t3">
+        </div> -->
+        <!-- <div class="col-sm-12 col-md-4 section-md-t3">
           <div class="widget-a">
             <div class="w-header-a">
               <h3 class="w-title-a text-brand">International sites</h3>
@@ -624,7 +624,7 @@
               </ul>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -643,9 +643,9 @@
               <li class="list-inline-item">
                 <a href="#">Property</a>
               </li>
-              <li class="list-inline-item">
+              <!-- <li class="list-inline-item">
                 <a href="#">Blog</a>
-              </li>
+              </li> -->
               <li class="list-inline-item">
                 <a href="#">Contact</a>
               </li>
@@ -686,15 +686,15 @@
               <span class="color-a">Allon Investments</span> All Rights Reserved.
             </p>
           </div>
-          <div class="credits">
+          <!-- <div class="credits"> -->
             <!--
               All the links in the footer should remain intact.
               You can delete the links only if you purchased the pro version.
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Allon Investments
             -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-          </div>
+            <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          </div> -->
         </div>
       </div>
     </div>
