--- a/index.html
+++ b/index.html
@@ -363,7 +363,8 @@
           </div>
         </div>
       </div>
-      <div id="property-carousel" class="owl-carousel owl-theme">
+      <!-- <div id="property-carousel" class="owl-carousel owl-theme"> -->
+        <div id="property-single-carousel" class="owl-carousel owl-theme">
         <div class="carousel-item-b">
           <div class="card-box-a card-shadow">
             <div class="img-box-a">
