--- a/blog-grid.html
+++ b/blog-grid.html
@@ -395,8 +395,8 @@
             </div>
             <div class="w-body-a">
               <p class="w-text-a color-text-a">
-                Enim minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip exea commodo consequat duis
-                sed aute irure.
+                Realize Your Real Estate Dreams with our Comprehensive Solution. Whether  you're looking for financing, design, or  construction, we offer a one-stop-shop
+                for all your real estate needs.
               </p>
             </div>
             <div class="w-footer-a">
