--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a href="agent-single.html" class="link-two">Elisha Gweth
+                    <a class="link-two">Elisha Gweth
                       <!-- <br> Escala -->
                     </a>
                   </h3>
@@ -594,7 +594,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Legal Department
+                  CEO
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -646,7 +646,7 @@
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a href="agent-single.html" class="link-two">Selina Kodo
+                    <a  class="link-two">Selina Kodo
                       <!-- <br> Darw -->
                     </a>
                   </h3>
@@ -700,13 +700,14 @@
         <div class="col-md-4">
           <div class="card-box-d">
             <div class="card-img-d">
-              <img src="img/members/hempstone.jpg" alt="" class="img-d img-fluid">
+              <img src="img/members/jes.jpeg" alt="" class="img-d img-fluid">
             </div>
             <div class="card-overlay card-overlay-hover">
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a href="agent-single.html" class="link-two">Hempston Nyawanda
+                    <!-- <a href="agent-single.html" class="link-two">Jesse Odidi -->
+                      <a class="link-two">Jesse Odidi
                       <!-- <br> Cascada -->
                     </a>
                   </h3>
@@ -714,13 +715,13 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Architect
+                  Architect, COO
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +254 707 591002</p>
+                    <strong>Phone: </strong> +254 713 744 764</p>
                   <p>
-                    <strong>Email: </strong> hempstone.nyawanda<br/>@alloninvestments.co.ke</p>
+                    <strong>Email: </strong> jesse.odidi<br/>@alloninvestments.co.ke</p>
                 </div>
               </div>
               <div class="card-footer-d">
@@ -960,8 +961,11 @@
             </div>
             <div class="w-body-a">
               <p class="w-text-a color-text-a">
-                Enim minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip exea commodo consequat duis
-                sed aute irure.
+                Realize Your Real Estate Dreams with
+                our Comprehensive Solution. Whether
+                you're looking for financing, design, or
+                construction, we offer a one-stop-shop
+                for all your real estate needs.
               </p>
             </div>
             <div class="w-footer-a">
