--- a/property-grid.html
+++ b/property-grid.html
@@ -235,8 +235,8 @@
               <div class="card-overlay-a-content">
                 <div class="card-header-a">
                   <h2 class="card-title-a">
-                    <a href="#">Appartment
-                      <br /> Name</a>
+                    <a href="#">The
+                      <br /> Mosaic</a>
                   </h2>
                 </div>
                 <div class="card-body-a">
